--- a/index.html
+++ b/index.html
@@ -1,25 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!--
+    If you are serving your web app in a path other than the root, change the
+    href value below to reflect the base path you are serving from.
+
+    The path provided below has to start and end with a slash "/" in order for
+    it to work correctly.
+
+    For more details:
+    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+
+    This is a placeholder for base href that will be replaced by the value of
+    the `--base-href` argument provided to `flutter build`.
+  -->
+  <!-- <base href="/"> -->
+  <base href="/expense-tracker/build/web/">
+
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="Track your daily income and expenses">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-  <!-- iOS PWA support -->
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <!-- iOS meta tags & icons -->
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="Money Tracker">
+  <meta name="apple-mobile-web-app-title" content="expense tracker">
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <!-- Theme color -->
-  <meta name="theme-color" content="#4CAF50">
-
-  <title>Money Tracker</title>
-  <link rel="manifest" href="manifest.json">
+  <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
+
+  <title>Expense Tracker</title>
+  <link rel="manifest" href="manifest.json">
+  <script type="text/javascript">
+	console.log("=========================== 1");
+  </script>
 </head>
 <body>
+  <!-- <script src="flutter_bootstrap.js" async></script> -->
   <script src="flutter.js" defer></script>
+  <script type="text/javascript">
+	console.log("=========================== 2x");
+    window.addEventListener('load', function(ev) {
+    _flutter.loader.loadEntrypoint({
+      serviceWorker: {
+        unregister: true,
+      },
+      onEntrypointLoaded: function(engineInitializer) {
+        console.log(engineInitializer);
+        engineInitializer.autoStart();
+      }
+    });
+  });
+  </script>
 </body>
 </html>
