--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="expense tracker">
+  <meta name="apple-mobile-web-app-title" content="Expense Tracker">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <!-- iOS splash screens (optional but recommended) -->
+  <link rel="apple-touch-startup-image" href="icons/Icon-512.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
